set new version, fix remaining cypher deprecations, remove profiles for older neo4j.